namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio
  labels:
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: jaeger-operator
  labels:
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
  labels:
    istio-injection: disabled
