namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    istio-injection: disabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: jaeger-operator
  labels:
    istio-injection: disabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
  labels:
    istio-injection: disabled
