appmanifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled # Включаем инжект сайдкаров Istio для неймспейса
---
#Конфигурация сервиса версии v1
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: istiohw
    version: v1
  name: istiohw-1
spec:
  containers:
  - image: flipmachin1001/istiohw:v1
    name: istiohw-1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istiohw-svc
    version: v1
  name: istiohw-svc-v2
  namespace: default
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
  selector:
    app: istiohw
    version: v1
  type: ClusterIP
---
#Конфигурация сервиса версии v2
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: istiohw
    version: v2
  name: istiohw-2
spec:
  containers:
  - image: flipmachin1001/istiohw:v2
    name: istiohw-2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istiohw-svc
    version: v2
  name: istiohw-svc-v1
  namespace: default
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
  selector:
    app: istiohw
    version: v2
  type: ClusterIP
---
#GateWay для сервисов
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
  namespace: default
spec:
  selector:
    app: istio-ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
#Виртуальный сервис для балансировки 50 / 50
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istiohw-virtual-service
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: istiohw-svc-v1
      weight: 50
    - destination:
        host: istiohw-svc-v2
      weight: 50
