echo-server-split.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver
spec:
  hosts:
  - echoserver
  http:
  - route:
    - destination:
        host: echoserver
      weight: 50
    - destination:
        host: echoserver2
      weight: 50
