istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: echoserver-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "echoserver.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver
spec:
  hosts:
  - "echoserver.com"
  gateways:
  - echoserver-gateway
  http:
  - route:
    - destination:
        port:
          number: 80    
        host: echoserver
        subset: v1
      weight: 10
    - destination:
        port:
          number: 80    
        host: echoserver
        subset: v2
      weight: 90        
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echoserver
spec:
  host: echoserver
  subsets:
  - name: v1
    labels:
      version: "1"
  - name: v2
    labels:
      version: "2"
