manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled # Включаем инжект сайдкаров Istio для неймспейса
---
#Конфигурация сервиса версии v1
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: istio-app
    version: v1
  name: istio-app-1
  namespace: default
spec:
  containers:
    - image: stefanprodan/podinfo
      name: istio-app-1
      ports: 
      - containerPort: 9898 
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istio-app-svc
    version: v1
  name: istio-app-svc-v1
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 9898 
      name: http
      protocol: TCP
  selector:
    app: istio-app
    version: v1
  type: ClusterIP
---
#Конфигурация сервиса версии v2
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: istio-app
    version: v2
  name: istio-app-2
  namespace: default
spec:
  containers:
    - image: stefanprodan/podinfo
      name: istio-app-2
      ports: 
      - containerPort: 9898 
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istio-app-svc
    version: v2
  name: istio-app-svc-v2
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 9898 
      name: http
      protocol: TCP
  selector:
    app: istio-app
    version: v2
  type: ClusterIP
---
#GateWay для сервисов
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
  namespace: default
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
#Виртуальный сервис для балансировки 50 / 50
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-app-virtual-service
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: istio-app-svc-v1
          weight: 50
        - destination:
            host: istio-app-svc-v2
          weight: 50
