manifests.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: echoserver
    version: v1
  name: echoserver-1
spec:
  containers:
  - image: k8s.gcr.io/echoserver:1.4
    name: echoserver-1
  dnsPolicy: ClusterFirst
  restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echoserver
    version: v1
  name: echoserver-1
  namespace: default
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8080
  selector:
    app: echoserver
    version: v1
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: echoserver
    version: v2
  name: echoserver-2
spec:
  containers:
  - image: k8s.gcr.io/echoserver:1.4
    name: echoserver-2
  dnsPolicy: ClusterFirst
  restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echoserver
    version: v2
  name: echoserver-2
  namespace: default
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8080
  selector:
    app: echoserver
    version: v2
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: echoserver-1
      weight: 50
    - destination:
        host: echoserver-2
      weight: 50
