rule-50-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapp
spec:
  hosts:
  - "*"
  gateways:
  - userapp-gateway
  http:
  - route:
    - destination:
        host: userapp
        subset: v1
      weight: 50
    - destination:
        host: userapp
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: userapp
spec:
  host: userapp
  subsets:
  - name: v1
    labels:
      version: "1"
  - name: v2
    labels:
      version: "2"
