virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - "httpbin.example.com"
  gateways:
    - httpbin-gateway
  http:
    - match:
        - uri:
            prefix: /status
        - uri:
            prefix: /delay
      route:
        - destination:
            port:
              number: 8000
            host: httpbin
    - match:
        - uri:
            prefix: /
        - uri:
            prefix: /hello
      route:
        - destination:
            port:
              number: 80
            host: echoserver
            subset: "1"
          weight: 10
        - destination:
            port:
              number: 80
            host: echoserver
            subset: "2"
          weight: 90
